<resources>
    <string name="app_name">成语新秀</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="bushou">首字部首</string>
    <string name="head">成语词头</string>
    <string name="pinyin">拼音</string>
    <string name="chengyujs">成语解释</string>
    <string name="from_">成语出处</string>
    <string name="example">举例</string>
    <string name="yufa">语法</string>
    <string name="ciyujs">词语解释</string>
    <string name="yinzhengjs">引证解释</string>
    <string name="tongyi">同义词</string>
    <string name="fanyi">反义词</string>

    <string name="empty_text">无</string>
    <string name="query_idiom_hint">请输入查询的4字成语</string>
    <string name="query_record">历史查询(最多显示9个)</string>
    <string name="record_is_empty">还没有查询历史，快快行动起来吧</string>
    <string name="function">功能</string>
    <string name="history_record">历史记录</string>
    <string name="share">分享</string>
</resources>
