<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <ImageView
            android:id="@+id/bannerIV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <EditText
            android:id="@+id/queryIdiomET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:background="@drawable/bg_query_edit"
            android:hint="@string/query_idiom_hint"
            android:imeOptions="actionSearch"
            android:singleLine="true" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/query_record" />

    <TextView
        android:id="@+id/emptyRecordTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/record_is_empty"
        android:textSize="16sp"
        android:visibility="gone" />

    <GridView
        android:id="@+id/recordGV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:horizontalSpacing="12dp"
        android:numColumns="3"
        android:padding="12dp"
        android:verticalSpacing="12dp"
        android:visibility="gone" />


</LinearLayout>
